completed the exercises